[gd_scene load_steps=10 format=3 uid="uid://c8auld8b8c1b8"]

[ext_resource type="Script" path="res://scenes/battle.gd" id="1_np3yy"]
[ext_resource type="PackedScene" path="res://scenes/stage-canyon.tscn" id="2_s08cu"]
[ext_resource type="Theme" uid="uid://cb7775rienopg" path="res://assets/theme_hud.tres" id="3_l41v1"]
[ext_resource type="Script" path="res://code/cards/deck.gd" id="4_w2hlf"]
[ext_resource type="PackedScene" uid="uid://12xcvgynuav6" path="res://scenes/carddeck/card.tscn" id="5_ciwt3"]
[ext_resource type="Script" path="res://code/cards/hand.gd" id="6_62jmu"]
[ext_resource type="PackedScene" uid="uid://dl6hn1xmgjcer" path="res://scenes/ui_stats.tscn" id="7_4522r"]
[ext_resource type="Script" path="res://code/creatures/player.gd" id="8_5spqe"]
[ext_resource type="Script" path="res://code/creatures/status.gd" id="9_mwlj1"]

[node name="Battle" type="Node3D"]
script = ExtResource("1_np3yy")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.201063, 2.46514, -1.45489)
projection = 1
current = true
size = 9.60921

[node name="Stage" type="Node" parent="."]

[node name="SpawnPoints" type="Node" parent="Stage"]

[node name="A" type="Node3D" parent="Stage/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.28843)

[node name="B" type="Node3D" parent="Stage/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.03015, 0, -6.18261)

[node name="C" type="Node3D" parent="Stage/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.21166, 0, -6.18261)

[node name="level_canyon" parent="." instance=ExtResource("2_s08cu")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_l41v1")

[node name="Deck" type="Node" parent="CanvasLayer/HUD" node_paths=PackedStringArray("hand")]
script = ExtResource("4_w2hlf")
card_template = ExtResource("5_ciwt3")
hand = NodePath("../Hand")

[node name="Hand" type="Control" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -587.0
offset_right = -167.0
offset_bottom = -587.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("6_62jmu")
card_width = 750.0
dist_from_root = 700.0

[node name="AttackButton" type="Button" parent="CanvasLayer/HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_top = 207.0
offset_right = 173.0
offset_bottom = 739.0
grow_horizontal = 2
text = "ATTACK"
flat = true

[node name="SelfButton" type="Button" parent="CanvasLayer/HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -486.0
offset_top = 63.0
offset_right = 487.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
text = "SELF"

[node name="Stats" parent="CanvasLayer/HUD" instance=ExtResource("7_4522r")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 225.0
offset_bottom = 64.0
grow_horizontal = 1
grow_vertical = 1

[node name="Player" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_5spqe")

[node name="Status" type="Node" parent="Player"]
script = ExtResource("9_mwlj1")
