[gd_scene load_steps=18 format=3 uid="uid://c3itjkr7u7brk"]

[ext_resource type="Script" path="res://code/creatures/player.gd" id="1_j3yra"]
[ext_resource type="Script" path="res://code/creatures/status.gd" id="2_h4t6e"]
[ext_resource type="Theme" uid="uid://cb7775rienopg" path="res://assets/theme_hud.tres" id="3_01oue"]
[ext_resource type="Script" path="res://code/cards/deck.gd" id="4_fojud"]
[ext_resource type="PackedScene" uid="uid://12xcvgynuav6" path="res://scenes/carddeck/card.tscn" id="5_nrki5"]
[ext_resource type="Script" path="res://code/cards/hand.gd" id="6_2m6ee"]
[ext_resource type="Texture2D" uid="uid://dj603rpe8sqad" path="res://assets/textures/card_ui/tc_button_discard.png" id="8_1eb0y"]
[ext_resource type="Texture2D" uid="uid://bpkb31ivsl18l" path="res://assets/textures/card_ui/tc_button_discard_press.png" id="9_8wgg6"]
[ext_resource type="Texture2D" uid="uid://bvxxd3rjxtlgl" path="res://assets/textures/card_ui/tc_button_discard_hover.png" id="10_xyumm"]
[ext_resource type="Script" path="res://code/creatures/ui_stats_labels.gd" id="11_2cw3i"]
[ext_resource type="Script" path="res://code/common/bettertexturebutton.gd" id="11_5q8ej"]
[ext_resource type="Texture2D" uid="uid://bpfles3bmbxlu" path="res://assets/textures/icons/status_icons_health.png" id="12_h08px"]
[ext_resource type="Texture2D" uid="uid://cqm6wigsux7ef" path="res://assets/textures/card_ui/player_stats_bg.png" id="12_ljmd1"]
[ext_resource type="LabelSettings" path="res://scenes/common/ui-label-settings.tres" id="13_43dyf"]
[ext_resource type="Texture2D" uid="uid://baciqafvs3ctw" path="res://assets/textures/icons/status_icons_block.png" id="14_57tco"]
[ext_resource type="Texture2D" uid="uid://nts6jkuw5wg4" path="res://assets/textures/icons/status_icons_burn.png" id="15_rdamu"]
[ext_resource type="Texture2D" uid="uid://ds3e2tqg4kxjs" path="res://assets/textures/icons/status_icons_poison.png" id="16_k0eud"]

[node name="Player" type="Node"]
script = ExtResource("1_j3yra")
metadata/_edit_vertical_guides_ = [1956.0]

[node name="Status" type="Node" parent="."]
script = ExtResource("2_h4t6e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_01oue")

[node name="Deck" type="Node" parent="CanvasLayer/HUD" node_paths=PackedStringArray("hand")]
script = ExtResource("4_fojud")
card_template = ExtResource("5_nrki5")
hand = NodePath("../Hand")

[node name="Hand" type="Control" parent="CanvasLayer/HUD"]
layout_mode = 1
anchor_left = 0.509
anchor_top = 1.0
anchor_right = 0.509
anchor_bottom = 1.0
offset_left = -241.56
offset_top = -591.0
offset_right = 980.44
offset_bottom = -366.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("6_2m6ee")
card_width = 750.0
dist_from_root = 700.0

[node name="AttackButton" type="Button" parent="CanvasLayer/HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -267.0
offset_right = 450.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAY"

[node name="DrawPile" type="Control" parent="CanvasLayer/HUD"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -416.0
offset_right = 469.0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("6_2m6ee")
card_fan_angle_turns = 0.02
selected_offset_multiplier = 1.0

[node name="DiscardPile" type="Control" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -381.0
offset_top = -640.0
offset_right = 88.0002
offset_bottom = -184.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
mouse_filter = 2
script = ExtResource("6_2m6ee")
card_fan_angle_turns = 0.02
selected_offset_multiplier = 1.0

[node name="DiscardAll" type="TextureButton" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -553.0
offset_top = -396.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("8_1eb0y")
texture_pressed = ExtResource("9_8wgg6")
texture_hover = ExtResource("10_xyumm")
script = ExtResource("11_5q8ej")

[node name="Stats" type="Control" parent="." node_paths=PackedStringArray("status", "hp", "block", "burn", "poison")]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 659.0
offset_bottom = 685.0
theme = ExtResource("3_01oue")
script = ExtResource("11_2cw3i")
status = NodePath("../Status")
hp = NodePath("HP")
block = NodePath("Block")
burn = NodePath("Burn")
poison = NodePath("Poison")

[node name="TextureRect" type="TextureRect" parent="Stats"]
layout_mode = 0
offset_left = -6.0
offset_top = -6.0
offset_right = 506.0
offset_bottom = 506.0
scale = Vector2(1.6, 1.6)
texture = ExtResource("12_ljmd1")
stretch_mode = 4

[node name="HP" type="Control" parent="Stats"]
layout_mode = 1
anchors_preset = 0
offset_left = 132.0
offset_top = 76.0
offset_right = 261.0
offset_bottom = 202.0

[node name="Icon" type="TextureRect" parent="Stats/HP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_h08px")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Stats/HP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -11.5
offset_right = 14.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "9
"
label_settings = ExtResource("13_43dyf")
metadata/_edit_lock_ = true

[node name="Block" type="Control" parent="Stats"]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 54.0
offset_top = 265.0
offset_right = 183.0
offset_bottom = 391.0

[node name="Icon" type="TextureRect" parent="Stats/Block"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_57tco")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Stats/Block"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -11.5
offset_right = 14.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "9"
label_settings = ExtResource("13_43dyf")
metadata/_edit_lock_ = true

[node name="Burn" type="Control" parent="Stats"]
visible = false
layout_mode = 1
anchor_left = 0.506
anchor_top = 0.324
anchor_right = 0.506
anchor_bottom = 0.324
offset_left = 5.06403
offset_top = -111.616
offset_right = 134.064
offset_bottom = 14.384

[node name="Icon" type="TextureRect" parent="Stats/Burn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_rdamu")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Stats/Burn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -11.5
offset_right = 14.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "9"
label_settings = ExtResource("13_43dyf")
metadata/_edit_lock_ = true

[node name="Poison" type="Control" parent="Stats"]
visible = false
layout_mode = 1
anchor_left = 0.506
anchor_top = 0.324
anchor_right = 0.506
anchor_bottom = 0.324
offset_left = -85.936
offset_top = 69.384
offset_right = 43.064
offset_bottom = 195.384

[node name="Icon" type="TextureRect" parent="Stats/Poison"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_k0eud")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Stats/Poison"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -11.5
offset_right = 14.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "9"
label_settings = ExtResource("13_43dyf")
metadata/_edit_lock_ = true
